--- a/rt/src/app/computer-science/ComputerScience.module.css
+++ b/rt/src/app/computer-science/ComputerScience.module.css
@@ -1,130 +1,131 @@
 /* styles/Engineering.module.css */
 
 .main {
-    padding: 4rem;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  
-  .fixedBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-  
-  .backgroundImage {
-    object-fit: cover;
-  }
-  
-  .title {
-    margin: 0;
-    line-height: 1.15;
-    font-size: 4rem;
-    text-align: center;
-  }
-  
-  .accomplishments {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 3rem;
-  }
-  
+  padding: 4rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.fixedBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.backgroundImage {
+  object-fit: cover;
+}
+
+.title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
+  text-align: center;
+}
+
+.accomplishments {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+}
+
+.card {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin-bottom: 5%;
+}
+
+@media (max-width: 950px) {
+  /* Adjust this value based on your design's breakpoint */
   .card {
-    margin: 1rem;
-    flex-basis: 45%;
-    padding: 1.5rem;
-    text-align: left;
-    color: inherit;
-    text-decoration: none;
-    border: 1px solid #eaeaea;
-    border-radius: 10px;
-    transition: color 0.15s ease, border-color 0.15s ease;
-    box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.25);
-    background-color: rgba(0, 0, 0, 0.7);
+    flex-basis: calc(100% - 2rem); /* Takes full width minus margin */
   }
-  
-  .card:hover,
-  .card:focus,
-  .card:active {
-    color: #0070f3;
-    border-color: #0070f3;
-  }
-  
-  .card h2 {
-    margin: 0 0 1rem 0;
-    font-size: 1.5rem;
-  }
-  
-  .card p {
-    margin: 0;
-    font-size: 1.25rem;
-    line-height: 1.5;
-  }
-  
-  @media (max-width: 950px) { /* Adjust this value based on your design's breakpoint */
-    .card {
-      flex-basis: calc(100% - 2rem); /* Takes full width minus margin */
-    }
-  }
-  
-  /* styles/Gallery.module.css */
-  
-  .imageGallery {
-    text-align: center;
-    padding: 3rem 0;
-  }
-  
-  .galleryTitle {
-    font-size: 2rem;
-    color: #d1cdcd;
-    margin-bottom: 2rem;
-  }
-  
+}
+
+/* styles/Gallery.module.css */
+
+.imageGallery {
+  text-align: center;
+  padding: 3rem 0;
+}
+
+.galleryTitle {
+  font-size: 2rem;
+  color: #d1cdcd;
+  margin-bottom: 2rem;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* Now 4 images per row */
+  gap: 10px;
+}
+
+.imageWrapper {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Landscape images now will automatically take up the height needed */
+.landscape {
+  grid-row: span 1;
+}
+
+/* Portrait images will span across two landscape images in height */
+.portrait {
+  grid-row: span 3;
+}
+
+.responsiveImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* Add responsive styles if needed */
+@media (max-width: 768px) {
   .grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Now 4 images per row */
-    gap: 10px;
+    grid-template-columns: repeat(
+      2,
+      1fr
+    ); /* Adjust the number of columns for smaller screens */
   }
-  
-  .imageWrapper {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    overflow: hidden;
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  
-  /* Landscape images now will automatically take up the height needed */
-  .landscape {
-    grid-row: span 1;
-  }
-  
-  /* Portrait images will span across two landscape images in height */
-  .portrait {
-    grid-row: span 3;
-  }
-  
-  .responsiveImage {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-  
-  /* Add responsive styles if needed */
-  @media (max-width: 768px) {
-    .grid {
-      grid-template-columns: repeat(
-        2,
-        1fr
-      ); /* Adjust the number of columns for smaller screens */
-    }
-  }
-  
+}
