--- a/rt/src/app/engineering/Engineering.module.css
+++ b/rt/src/app/engineering/Engineering.module.css
@@ -67,6 +67,7 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+  padding-bottom: 5%;
 }
 
 @media (max-width: 950px) { /* Adjust this value based on your design's breakpoint */
