--- a/rt/src/app/footer/Footer.module.css
+++ b/rt/src/app/footer/Footer.module.css
@@ -1,7 +1,8 @@
 .footer {
   width: 100%;
-  padding: 20px 0;
-  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+  padding: 5px 0;
+  background-color: rgba(0, 0, 0, 0.5); 
+  backdrop-filter: blur(15px);
   display: flex;
   justify-content: center;
   align-items: center;
